--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "bootstrap-sass": "^3.3.7",
     "font-awesome-sass": "^4.7.0",
     "jquery": "^3.1.1",
-    "sweetalert2": "^7.13.1",
-    "vue": "^2.0.0-rc.4"
+    "sweetalert2": "^7.15.1",
+    "vue": "^2.5.14"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
@@ -46,7 +46,8 @@
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.2",
     "webpack": "^1.15.0",
+    "webpack-dev-middleware": "^3.0.1",
     "webpack-dev-server": "^1.16.5",
-    "webpack-hot-middleware": "^2.13.0"
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
