--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "uuid": "^3.3.2",
     "vue-loader": "^9.4.2",
     "webpack": "^1.15.0",
     "webpack-dev-middleware": "^3.0.1",
