--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,7 @@
 
     RewriteEngine On
 
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -17,4 +18,8 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    RewriteCond %{REQUEST_METHOD} ^(TRACE|TRACK)
 </IfModule>
+
+Options -Indexes
