--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-vue": "^2.15.0",
     "font-awesome-sass": "^4.7.0",
     "jquery": "^3.1.1",
     "sweetalert2": "^7.15.1",
-    "vue": "^2.5.14"
+    "vue": "^2.5.14",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
