--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,21 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "php": "^7.1.3",
+        "laravel/framework": "5.5.*",
         "maatwebsite/excel": "~2.1.0",
         "barryvdh/laravel-dompdf": "^0.8.2",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "^2.10",
+        "barryvdh/laravel-translation-manager": "^0.5.9"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -46,6 +48,10 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
