--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "maatwebsite/excel": "~2.1.0",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "doctrine/dbal": "^2.10",
-        "barryvdh/laravel-translation-manager": "^0.5.9"
+        "barryvdh/laravel-translation-manager": "^0.5.9",
+        "liebig/cron": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
